--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'install.sh'
+      - 'uninstall.sh'
   workflow_dispatch:
 
 permissions:
@@ -25,20 +26,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
-        
+
       - name: Create Pages directory structure
         run: |
           mkdir -p pages
           cp install.sh pages/
-          
+          cp uninstall.sh pages/
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: './pages'
-          
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
